# tivit_test

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/models/: entities.py
app/routers/: auth.py
app/services/: auth.py  db.py
